add fm resample rate
