# server/openapi/fm_devices.yaml
@@ -77,6 +77,7 @@ components:
       required:
         - name
         - sample_rate
+        - resample_rate
         - freq
         - longitude
         - latitude
@@ -84,6 +85,8 @@ components:
         name:
           type: string
         sample_rate:
+          type: string
+        resample_rate:
           type: string
         freq:
           type: string
@@ -120,4 +123,6 @@ components:
         freq:
           type: string
         sample_rate:
+          type: string
+        resample_rate:
           type: string
